Print the text (skip a line on every line) on the webpage

--- a/static/ascii-art.gohtml
+++ b/static/ascii-art.gohtml
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>ASCII Art Generator</h1>
-    <pre>{{.Art}}</pre>
+    <pre>{{.Art1}}</pre>
+    <pre>{{.Art2}}</pre>
+    <pre>{{.Art3}}</pre>
+    <pre>{{.Art4}}</pre>
+    <pre>{{.Art5}}</pre>
+    <pre>{{.Art6}}</pre>
+    <pre>{{.Art7}}</pre>
+    <pre>{{.Art8}}</pre>
 </body>
 </html>
