Working for 1 line of input

--- a/static/ascii-art.gohtml
+++ b/static/ascii-art.gohtml
@@ -8,13 +8,6 @@
 </head>
 <body>
     <h1>ASCII Art Generator</h1>
-    <pre>{{.Art1}}</pre>
-    <pre>{{.Art2}}</pre>
-    <pre>{{.Art3}}</pre>
-    <pre>{{.Art4}}</pre>
-    <pre>{{.Art5}}</pre>
-    <pre>{{.Art6}}</pre>
-    <pre>{{.Art7}}</pre>
-    <pre>{{.Art8}}</pre>
+    <pre>{{.Art1}}<br>{{.Art2}}<br>{{.Art3}}<br>{{.Art4}}<br>{{.Art5}}<br>{{.Art6}}<br>{{.Art7}}<br>{{.Art8}}</pre>
 </body>
 </html>
