trying to figure out how PostForm works, in order to accept multple line of input

--- a/static/ascii-art.gohtml
+++ b/static/ascii-art.gohtml
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>ASCII Art Generator</h1>
-    <pre>{{.Art1}}<br>{{.Art2}}<br>{{.Art3}}<br>{{.Art4}}<br>{{.Art5}}<br>{{.Art6}}<br>{{.Art7}}<br>{{.Art8}}</pre>
+    <pre>
+        {{.ArtLine1}}
+        {{.ArtLine2}}
+        {{.ArtLine3}}
+        {{.ArtLine4}}
+        {{.ArtLine5}}
+        {{.ArtLine6}}
+        {{.ArtLine7}}
+        {{.ArtLine8}}
+    </pre>
 </body>
 </html>
