Modified some names

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
       <textarea name="ascii" cols="30" rows="10" placeholder="Type here..."></textarea>
       <label for="banner">Choose a Banner:</label>
       <select id="banner" name="banner">
-        <option value="standard">Standard</option>
+        <option selected value="standard">Standard</option>
         <option value="shadow">Shadow</option>
         <option value="thinkertoy">ThinkerToy</option>
       </select> 
