get rid of the art struct, and passed in a slice od string instead

--- a/templates/ascii-art.html
+++ b/templates/ascii-art.html
@@ -9,7 +9,7 @@
 <body>
     <h1>ASCII Art Generator</h1>
     <pre>
-        {{range .ArtLines}}{{.}}<br>{{end}}
+        {{range .}}{{.}}<br>{{end}}
     </pre>
 </body>
 </html>
